--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <div class="service-plans__inner">
       <header class="service-plans__header">
         <img
-          src="LOGO_URL_HERE"
+          src="assets/logo.png"
           alt="hi.tech.audio.video"
           class="service-plans__logo"
         />
